# ASLense

./: .gitignore  CMakeLists.txt  DATASET_SETUP.md  PHASE1_COMPLETE.md  PHASE1_STEP3_COMPLETE.md  PHASE2_PLAN.md  PHASE2_QUICKSTART.md  PHASE2_README.md  PHASE2_STATUS.md  PHASE3_PLAN.md  README.md  VISUALIZER_GUIDE.md  asl_project_brief.md  build_asl_recognition.bat  build_integration.bat  build_visualizer.bat  run_visualizer.bat  test_compile.bat  test_opencv.bat
models/: asl_model.keras  asl_model.tflite  asl_model_quantized.tflite  label_encoder.pkl
python/: data_preprocessing.py  dataset_preparation.py  demo_recognition.py  hand_detector.py  interactive_learning.py  landmark_service.py  model_evaluation.py  model_export.py  model_training.py  recognition_service.py  requirements.txt  test_camera_detection.py  test_mediapipe.py  test_service.py  visualizer_simple.py
src/: asl_recognition.cpp  asl_recognition_service.cpp  asl_recognition_service.hpp  camera_test.cpp  file_visualizer.cpp  integration_test.cpp  landmark_service.cpp  landmark_service.hpp  main.cpp  minimal_test.cpp  opencv_test.cpp  opencv_window_test.cpp  text_monitor.cpp  visualizer.cpp
